# chatter-judge

./: .env.example  Dockerfile  README.md  build.sh  build_docker.sh  docker-compose.yml  gemini.py  gemini1.py  gemini2.py  gemini_V2.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
Chatter/App/: App.py
Chatter/ChatBot/: Chat.py  Prompt.py
Chatter/GUI/: Launch.py
Chatter/GUI/Information/: Header.py  Question.py
Chatter/GUI/Login/: Auth.py
Chatter/GUI/Tab/: History.py  Submit.py
Chatter/Judge/: Judge.py
Chatter/Utils/: Build.py  Listener.py  Update.py
docs/: index.md
docs/developers_guide/: index.md
docs/developers_guids/: index.md
sandbox/: Dockerfile  app.py
web/: Dockerfile  pyproject.toml
web/Chatter/App/: App.py
web/Chatter/ChatBot/: Chat.py
web/Chatter/Database/: connection.py  models.py
web/Chatter/GUI/Information/: Header.py  Question.py
web/Chatter/GUI/Login/: Auth.py
web/Chatter/GUI/Tab/: Submit.py
web/Chatter/Judge/: Judge.py  Plot.py
web/Chatter/Routes/: auth.py
web/Chatter/Utils/: Listener.py
